int~ Fix scroll bug on small screens

--- a/src/web/styles/style.css
+++ b/src/web/styles/style.css
@@ -16,7 +16,7 @@ body {
 .app {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
 }
 
